--- a/css/styles.css
+++ b/css/styles.css
@@ -847,3 +847,28 @@ div h3 {
   fill: #ffffff;
   margin-left: 10px;
 }
+
+.total-form {
+  text-align: center;
+  margin: 40px;
+}
+
+.form-title {
+  width: 448px;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  color: var(--main-color-text);
+}
+
+.form {
+  margin-top: 12px;
+}
+
+.form-field {
+  margin-top: 28px;
+}
+
+.form-input:focus + .form-label {
+  color: #2196f3;
+}
