--- a/css/styles.css
+++ b/css/styles.css
@@ -894,7 +894,6 @@ div h3 {
 }
 
 .total-form {
-  width: 448px;
   margin: 40px;
 }
 
@@ -909,16 +908,36 @@ div h3 {
 
 .form {
   margin-top: 12px;
+  width: 448px;
 }
 
 .form-field {
-  margin-left: 0;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
+  display: block;
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field:focus-within > .form-label {
+  color: #2196f3;
+  border: 1px solid #2196f3;
 }
 
 .form-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
@@ -926,20 +945,6 @@ div h3 {
   margin-right: auto;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input {
-  width: 100%;
-  height: 40px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input:focus + .form-label {
-  color: #2196f3;
-  border: 1px solid #2196f3;
 }
 
 .form-textarea {
@@ -960,5 +965,14 @@ div h3 {
 }
 
 .form-svg {
+  fill: #212121;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field:focus-within > .form-svg {
   fill: #2196f3;
 }
