--- a/css/styles.css
+++ b/css/styles.css
@@ -927,7 +927,8 @@ div h3 {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field:focus-within > .form-label {
+.form-field:focus-within > .form-label,
+.form-field:focus-within > .form-textarea {
   color: #2196f3;
   border: 1px solid #2196f3;
 }
@@ -948,6 +949,8 @@ div h3 {
 }
 
 .form-textarea {
+  width: 100%;
+  margin-bottom: 20px;
   padding-left: 16px;
   padding-top: 12px;
   font-size: 12px;
@@ -975,4 +978,25 @@ div h3 {
 
 .form-field:focus-within > .form-svg {
   fill: #2196f3;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #2196f3;
+}
+
+.checkbox {
+  position: absolute;
+  width: 425px;
+  appearance: none;
+}
+
+.text-checkbox {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
