--- a/css/styles.css
+++ b/css/styles.css
@@ -637,12 +637,10 @@ div h3 {
   justify-content: center;
 }
 
-.form-subscribe {
+.footer-form {
   margin-top: 16px;
 
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
 }
 
@@ -650,6 +648,7 @@ div h3 {
   width: 358px;
   height: 50px;
   background-color: #2f303a;
+  margin-left: 0;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -980,23 +979,43 @@ div h3 {
   fill: #2196f3;
 }
 
+.checkbox-label {
+  display: block;
+  outline: 1px solid red;
+}
+
 .checkbox-icon {
-  display: inline-block;
+  display: block;
   content: "";
-  width: 20px;
-  height: 20px;
-  background-color: #2196f3;
+  width: 16px;
+  height: 15px;
+  background-image: url(/images/check-empty.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  left: 54px;
 }
 
 .checkbox {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
   position: absolute;
   width: 425px;
   appearance: none;
 }
 
+.checkbox:checked + .checkbox-icon {
+  background-color: transparent;
+  background-image: url(/images/check-full.svg);
+}
+
 .text-checkbox {
+  display: flex;
+  align-items: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+  padding-left: 36px;
 }
