--- a/css/styles.css
+++ b/css/styles.css
@@ -980,8 +980,7 @@ div h3 {
 }
 
 .checkbox-label {
-  display: block;
-  outline: 1px solid red;
+  display: flex;
 }
 
 .checkbox-icon {
@@ -993,7 +992,7 @@ div h3 {
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  left: 54px;
+  left: 16px;
 }
 
 .checkbox {
@@ -1018,4 +1017,35 @@ div h3 {
   letter-spacing: 0.03em;
   color: #757575;
   padding-left: 36px;
+}
+
+.conditions {
+  margin-left: 5px;
+  padding-left: 0;
+  color: #2196f3;
+}
+
+.btn-submit-checkbox {
+  cursor: pointer;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  letter-spacing: 0.06em;
+  color: var(--main-color-text-darkbackground);
+
+  text-align: center;
+
+  width: 200px;
+  margin: auto;
+
+  padding: 10px 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
