--- a/css/styles.css
+++ b/css/styles.css
@@ -1041,7 +1041,7 @@ div h3 {
   text-align: center;
 
   width: 200px;
-  margin: auto;
+  margin: 30px auto;
 
   padding: 10px 28px;
   display: flex;
