--- a/css/styles.css
+++ b/css/styles.css
@@ -630,11 +630,6 @@ div h3 {
 
 .subscribe {
   margin-left: 93px;
-  width: 570px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
 }
 
 .footer-form {
@@ -833,7 +828,7 @@ div h3 {
   min-width: 528px;
   min-height: 581px;
   background-color: var(--main-color-text-darkbackground);
-  padding: 8px;
+  padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -856,10 +851,17 @@ div h3 {
   position: absolute;
   right: 8px;
   top: 8px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-modal-svg {
   display: flex;
+}
+
+.btn-modal:focus,
+.btn-modal:hover {
+  fill: #2196f3;
+  cursor: pointer;
 }
 
 .btn-submit {
@@ -892,10 +894,6 @@ div h3 {
   margin-left: 10px;
 }
 
-.total-form {
-  margin: 40px;
-}
-
 .form-title {
   width: 100%;
   font-size: 20px;
@@ -906,14 +904,12 @@ div h3 {
 }
 
 .form {
-  margin-top: 12px;
-  width: 448px;
+  width: 100%;
 }
 
 .form-field {
   display: block;
   position: relative;
-  margin-bottom: 28px;
 }
 
 .form-input {
@@ -929,22 +925,19 @@ div h3 {
 .form-field:focus-within > .form-label,
 .form-field:focus-within > .form-textarea {
   color: #2196f3;
-  border: 1px solid #2196f3;
 }
 
 .form-label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translateY(-100%);
-
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: var(--second-color-text);
-  margin-right: auto;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-label {
+  position: relative;
 }
 
 .form-textarea {
@@ -958,6 +951,7 @@ div h3 {
   color: rgba(117, 117, 117, 0.5);
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  resize: none;
 }
 
 .form-input::placeholder {
@@ -1006,6 +1000,10 @@ div h3 {
 .checkbox:checked + .checkbox-icon {
   background-color: transparent;
   background-image: url(../images/check-full.svg);
+}
+
+.checkbox-label:focus ~ .checkbox-icon {
+  border-color: #2196f3;
 }
 
 .text-checkbox {
