--- a/css/styles.css
+++ b/css/styles.css
@@ -912,6 +912,19 @@ div h3 {
   position: relative;
 }
 
+.form-label {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--second-color-text);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-label {
+  position: relative;
+}
+
 .form-input {
   width: 100%;
   height: 40px;
@@ -927,17 +940,17 @@ div h3 {
   color: #2196f3;
 }
 
-.form-label {
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: var(--second-color-text);
-
+.form-svg {
+  fill: #212121;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-label {
-  position: relative;
+.form-field:focus-within ~ .form-svg {
+  fill: #2196f3;
 }
 
 .form-textarea {
@@ -958,19 +971,6 @@ div h3 {
   font-size: 12px;
   line-height: 14px;
   color: rgba(117, 117, 117, 0.5);
-}
-
-.form-svg {
-  fill: #212121;
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-field:focus-within > .form-svg {
-  fill: #2196f3;
 }
 
 .checkbox-label {
@@ -994,7 +994,6 @@ div h3 {
   visibility: hidden;
   position: absolute;
   width: 425px;
-  appearance: none;
 }
 
 .checkbox:checked + .checkbox-icon {
