--- a/css/styles.css
+++ b/css/styles.css
@@ -936,8 +936,11 @@ div h3 {
 }
 
 .form-field:focus-within > .form-label,
-.form-field:focus-within > .form-textarea {
+.form-field:focus-within > .form-input,
+.form-field:focus-within > .form-textarea,
+.form-field:focus-within > .modal-label {
   color: #2196f3;
+  border: #2196f3;
 }
 
 .form-svg {
@@ -974,18 +977,20 @@ div h3 {
 }
 
 .checkbox-label {
-  display: flex;
+  display: block;
 }
 
 .checkbox-icon {
   display: block;
   width: 16px;
   height: 15px;
-  background-image: url(../images/check-empty.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  border: 2px solid #212121;
+  border-radius: 2px;
+
   position: absolute;
-  left: 16px;
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox {
@@ -997,17 +1002,18 @@ div h3 {
 }
 
 .checkbox:checked + .checkbox-icon {
-  background-color: transparent;
-  background-image: url(../images/check-full.svg);
+  background-color: #2196f3;
+  background-image: url(../images/icon-check.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.checkbox-label:focus ~ .checkbox-icon {
+.checkbox:focus-within + .checkbox-icon {
   border-color: #2196f3;
 }
 
 .text-checkbox {
-  display: flex;
-  align-items: center;
+  text-align: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
