--- a/css/styles.css
+++ b/css/styles.css
@@ -929,18 +929,25 @@ div h3 {
   width: 100%;
   height: 40px;
   padding-left: 42px;
+  outline: none;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-input:focus {
+  border-color: #2196f3;
+}
+
+.form-input:focus + .form-svg {
+  fill: #2196f3;
+  cursor: pointer;
+}
 
 .form-field:focus-within > .form-label,
-.form-field:focus-within > .form-input,
-.form-field:focus-within > .form-textarea,
-.form-field:focus-within > .modal-label {
+.form-field:focus-within > .form-textarea {
   color: #2196f3;
-  border: #2196f3;
+  cursor: pointer;
 }
 
 .form-svg {
@@ -950,10 +957,6 @@ div h3 {
   left: 12px;
   transform: translateY(-50%);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-field:focus-within ~ .form-svg {
-  fill: #2196f3;
 }
 
 .form-textarea {
@@ -980,6 +983,10 @@ div h3 {
   display: block;
 }
 
+.checkbox-all {
+  position: relative;
+}
+
 .checkbox-icon {
   display: block;
   width: 16px;
@@ -988,6 +995,10 @@ div h3 {
   border-radius: 2px;
 
   position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+
   transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
