--- a/css/styles.css
+++ b/css/styles.css
@@ -900,16 +900,22 @@ div h3 {
   font-weight: 700;
   letter-spacing: 0.03em;
   color: var(--main-color-text);
-  margin-bottom: 28px;
+  margin-bottom: 12px;
 }
 
 .form {
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .form-field {
   display: block;
   position: relative;
+  margin-bottom: 10px;
+}
+
+.comment {
+  margin-bottom: 20px;
 }
 
 .form-label {
@@ -961,7 +967,6 @@ div h3 {
 
 .form-textarea {
   width: 100%;
-  margin-bottom: 20px;
   padding-left: 16px;
   padding-top: 12px;
   font-size: 12px;
@@ -981,6 +986,7 @@ div h3 {
 
 .checkbox-label {
   display: block;
+  margin-bottom: 30px;
 }
 
 .checkbox-all {
@@ -1005,11 +1011,17 @@ div h3 {
 }
 
 .checkbox {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
   position: absolute;
-  width: 425px;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .checkbox:checked + .checkbox-icon {
@@ -1051,14 +1063,10 @@ div h3 {
   letter-spacing: 0.06em;
   color: var(--main-color-text-darkbackground);
 
+  display: block;
   text-align: center;
+  padding: 10px 55px;
+  margin: 0 auto;
 
-  width: 200px;
-  margin: 30px auto;
-
-  padding: 10px 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
